# RyanApp

./: basketball.ipynb  basketball.py  basketball_players.csv  prototype.py  pyproject.toml
src/: basketball.ipynb  basketball_scraper.py  prototype.py  web_app.py
