[tool.poetry]
name = "ryanapp"
version = "0.1.0"
description = ""
authors = ["pierrepfarr <ppfarr@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.83.0"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
